--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,22 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body{
+  background-color: black;
+  margin: 0;
+}
+
+.header{
+  color: white;
+  background: linear-gradient(
+      to bottom, 
+      rgba(0,0,0,1) 85%, 
+      rgba(0,0,0,0) 100%
+  );
+  height: 132px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-title{
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  font-size: 42px;
 }
