--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,18 @@
 body{
-  background-color: white;
+  background-color: rgb(11, 11, 14);
   margin: 0;
   display: flex;
   justify-content: center;
   text-align: center;
+  font-family: Poppins;
 }
 
 .header{
   color: #ffffff;
   background: linear-gradient(
       to bottom, 
-      rgba(0,0,0,1) 85%, 
-      rgba(0,0,0,0) 100%
+      rgba(11, 11, 14,1) 80%, 
+      rgba(11, 11, 14,0) 100%
   );
   height: 132px;
   display: flex;
@@ -24,16 +25,22 @@ body{
   z-index: 999;
 }
 
+.header > h1{
+  font-family: Charm;
+  font-size: 40px;
+}
+
 .logo-title{
   text-align: center;
   font-size: 42px;
 }
 
 .section {
-  margin-top: 20vh;
+  margin-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: white
 }
 
 .options {
@@ -41,23 +48,27 @@ body{
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  color: white;
 }
 
 .btn {
   width: 200px;
   padding: 50px;
   cursor: pointer;
-  background-color: white;
-  border: 2px solid #ddd;
+  background-color: black;
+  color:white;
+  border: 2px solid #a3a3a3;
   font-size: 18px;
   transition: all 0.3s ease;
+  border-radius: 8px;
+  font-family: Poppins;
 }
 .btn:hover {
-  background-color: #f0f0f0;
+  background-color: #141414;
 }
 .btn.selected {
-  background-color: #e0e0e0;
-  border-color: #666;
+  background-color: #4e6c7e;
+  border-color: #a8d8d2;
 }
 
 .generate-btn {
@@ -134,6 +145,7 @@ body{
 
 .style-container{
   height: 450px;
+  color: white;
 }
 
 .statistics-container {
@@ -245,4 +257,15 @@ body{
 
 .action-buttons button:hover {
   background-color: #0056b3;
+}
+
+.bottom-gradient {
+  height: 50%;
+  width: 100%;
+  background-size: 200% 200%;
+  width: 100%;
+  height: 40vh;
+  bottom: 0;
+  position:fixed;
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(102, 133, 139, 0.171) 100%);
 }
