--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,16 +30,11 @@ body{
   z-index: 100;
 }
 
-.header > a{
+.logo-title{
   font-family: Beanco;
   font-size: 60px;
   color: white;
   text-decoration: none;
-}
-
-.logo-title{
-  text-align: center;
-  font-size: 42px;
 }
 
 .section {
@@ -445,3 +440,99 @@ body{
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.login-btn , .signup-btn{
+  background-color: black;
+  width: 60px;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-family: Poppins;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  padding: 10px;
+}
+
+.login-btn:hover, .signup-btn:hover {
+  background-color: white;
+  color: black;
+  border-color: black;
+  font-family: Poppins;
+}
+
+.login-btn{
+  right:110px;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+}
+
+.login-card {
+  background-color: #1E1E1E;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  max-width: 400px;
+}
+
+.login-title {
+  text-align: center;
+  font-size: 2rem;
+  color: #E0E0E0;
+  margin-bottom: 20px;
+}
+
+.login-input {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 12px;
+  margin-bottom: 16px;
+  background-color: #181818;
+  color: #E0E0E0;
+  border: 1px solid #444;
+  border-radius: 6px;
+}
+
+.login-input:focus {
+  outline: none;
+  border-color: #5C6BC0;
+  box-shadow: 0 0 8px rgba(92, 107, 192, 0.5);
+}
+
+.login-btn-main {
+  width: 100%;
+  padding: 12px;
+  background-color: #2962FF;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-btn-main:hover {
+  background-color: #1C54B2;
+}
+
+.signup-link {
+  display: block;
+  text-align: center;
+  margin-top: 16px;
+  color: #64B5F6;
+  text-decoration: none;
+}
+
+.signup-link:hover {
+  text-decoration: underline;
+}
